--- a/style.css
+++ b/style.css
@@ -188,6 +188,15 @@ footer{
     height: 220px;
  }
 
+ .my-custom-scrollbar {
+    position: relative;
+    height: 300px;
+    overflow: auto;
+    }
+    .table-wrapper-scroll-y {
+    display: block;
+    }
+
  @media (max-width: 900px) {
     .title{
         text-align: center;
