--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ footer{
     height: 300px;
     overflow: auto;
     }
-    .table-wrapper-scroll-y {
+.table-wrapper-scroll-y {
     display: block;
     }
 
@@ -335,5 +335,46 @@ footer{
         left: auto;
         right: 13rem;
      }
+
+  }
+
+
+  @media only screen and (max-width: 767px) {
+
+    #map_illustration{
+        display: none !important;
+        
+    }
+
+    .title{
+
+        padding: 2% 5%;
+
+    }
+
+    #Economi{
+        padding: 2% 5%;
+    }
+
+    .hero {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        z-index: 3;
+        /* opacity: 0.3;  */
+        padding: 3rem 1rem;
+        width: 250px; 
+        height: 300px; 
+        background-color: rgba(127, 255, 212,0.5); 
+        color: #fff;
+        text-align: center;
+        /* text-transform: uppercase; */
+        text-shadow: 1px 1px 0 rgba(0,0,0,.75);
+          -webkit-transform: translate3d(-50%,-50%,0);
+             -moz-transform: translate3d(-50%,-50%,0);
+              -ms-transform: translate3d(-50%,-50%,0);
+               -o-transform: translate3d(-50%,-50%,0);
+                  transform: translate3d(-50%,-50%,0);
+    }
 
   }
